Fix js temporarily (need to figure out webpack, or just use clojurescript)

--- a/resources/public/about.html
+++ b/resources/public/about.html
@@ -19,7 +19,7 @@
                 <p>We love ganja, but it is not a requirement for membership.</p>
                 <p>We’re all chill here.</p>
               </div>
-              <div class="edit-box"></div>
+              <div id="edit-box"></div>
             </div>
           </div>
         </div>
@@ -32,6 +32,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/lib/bootstrap.min.js"></script>
-    <script src="js/build/ganja.js"></script>
+    <script src="js/build/ganja-total.js"></script>
   </body>
 </html>
