--- a/resources/public/register.html
+++ b/resources/public/register.html
@@ -24,6 +24,7 @@
                       <label for="status">Special Clan status <span class="warning">* Note that this is subject to admin approval.</span></label>
                       <select name="status" class="form-control reg-drop">
                         <option value="none">None</option>
+                        <option value="admin">Admin</option>
                         <option value="elder">Elder</option>
                         <option value="coleader">Co-Leader</option>
                         <option value="leader">Leader</option>
@@ -65,6 +66,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/lib/bootstrap.min.js"></script>
-    <script src="js/build/ganja.js"></script>
+    <script src="js/build/ganja-total.js"></script>
   </body>
 </html>
