--- a/resources/public/register.html
+++ b/resources/public/register.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="register-button">
                       <div class="reg-button">
-                        <button type="submit" class="btn">Register</button>
+                        <button type="submit" class="btn orange-btn">Register</button>
                       </div>
                     </div>
                   </fieldset>
