Corrected bandname for Deamon Cleaner

--- a/resources/public/misc.html
+++ b/resources/public/misc.html
@@ -53,9 +53,9 @@
             <div class="news-content">
               <p>Cooper Bell – Our brother Deathgrindfreak created a <a href="https://play.google.com/store/apps/details?id=io.deathgrindfreak.clashcaller">clash caller app</a> for android devices. A special thanks to Deathgrindfreak!</p>
             </div>
-            <h3>Stone Bride</h3>
+            <h3>Stonebride</h3>
             <div class="news-content">
-              <p>Listen to Elder Deamon Cleaner’s band Stone Bride at: <a href="http://stonebride.bandcamp.com">http://stonebride.bandcamp.com</a>
+              <p>Listen to Elder Deamon Cleaner’s band Stonebride at: <a href="http://stonebride.bandcamp.com">http://stonebride.bandcamp.com</a>
             </div>
             <h3>Guy Nuesca</h3>
             <div class="news-content">
